# gen-commit

./: .gitignore  LICENSE  README.md  autocommit.py  autocommit.rb  gen-commit.rb  pyproject.toml  requirements.txt  setup.py  test_simple.py
autocommit/: __init__.py  autocommit.py
autocommit/src/: llm_wrapper.py  prompts.py
src/: __init__.py  gencommit.py  prompts.py
src/utils/: config.py  llm_wrapper.py  prompts.py  read_config.py
tests/: generic.py
utils/: convert_requirements.py
