[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen-commit"
version = "0.6.1"
dependencies = [
    "openai",
    "anthropic",
    "tiktoken",
    "tomli",
    "aiohttp",
]
requires-python = ">=3.11"
authors = [
  { name="Raghav Pillai", email="raghav@tryspeck.com" },
]
description = "Auto-generate git commit messages"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/raghavpillai/gen-commit"
Issues = "https://github.com/raghavpillai/gen-commit/issues"

[project.scripts]
gencommit = "src.gencommit:gencommit"

[tool.hatch.build.targets.wheel]
packages = ["src"]